--- a/.github/workflows/python_script.yml
+++ b/.github/workflows/python_script.yml
@@ -2,7 +2,7 @@ name: Run Python Script Periodically
 
 on:
   schedule:
-    - cron: '*/30 * * * *'
+    - cron: '*/10 * * * *'
 
 jobs:
   run-python-script:
@@ -17,11 +17,13 @@ jobs:
         with:
           python-version: 3.11.4
 
+      - name: Create virtual environment
+        run: python -m venv venv
+      - name: Activate virtual environment
+        run: source venv/bin/activate
+
       - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+        run: pip install -r requirements.txt
 
       - name: Run Python Script
         run: python /python_scripts/src/main.py
-
