--- a/.github/workflows/python_script.yml
+++ b/.github/workflows/python_script.yml
@@ -25,13 +25,14 @@ jobs:
       - name: Install dependencies
         run: pip install -r requirements.txt
 
-      - name: Test folders
+      - name: Test folders and change permissions
         run: |
           pwd
           ls -la
+          chmod +x test.py
 
       - name: Run Python Script
-        run: python ../test.py
+        run: python /test.py
 
       - name: commit files
         run: |
