--- a/.github/workflows/python_script.yml
+++ b/.github/workflows/python_script.yml
@@ -29,11 +29,11 @@ jobs:
         run: |
           pwd
           ls -la
-          chmod +x /python_scripts/main.py
+          chmod +x ./python_scripts/main.py
           ls -la
 
       - name: Run Python Script
-        run: python /python_scripts/main.py
+        run: python ./python_scripts/main.py
 
       - name: commit files
         run: |
