Update python_script.yml change in secrets

--- a/.github/workflows/python_script.yml
+++ b/.github/workflows/python_script.yml
@@ -34,8 +34,8 @@ jobs:
 
       - name: Run Python Script
         env:
-          COINPAPRIKA_APIKEY: ${{ secrets.COINPAPRIKA_APIKEY }}
-          DUNE_APIKEY: ${{ secrets.DUNE_APIKEY }}
+          COINPAPRIKA_APIKEY: ${{ tsts.COINPAPRIKA_APIKEY }}
+          DUNE_APIKEY: ${{ tsts.DUNE_APIKEY }}
 
         run: python ./python_scripts/main.py
 
