--- a/.github/workflows/python_script.yml
+++ b/.github/workflows/python_script.yml
@@ -27,10 +27,10 @@ jobs:
         run: pip install -r requirements.txt
 
       - name: Print Secrets
-        run: echo "COINPAPRIKA_APIKEY=${{ secrets.COINPAPRIKA_APIKEY }}" >> $GITHUB_ENV
+        run: echo "DUNE_APIKEY=${{ secrets.DUNE_APIKEY }}" >> $GITHUB_ENV
       
       - name: Show Secrets
-        run: echo "COINPAPRIKA_APIKEY=$COINPAPRIKA_APIKEY"
+        run: echo "DUNE_APIKEY=$DUNE_APIKEY"
 
       - name: Test folders and change permissions
         run: |
