--- a/.github/workflows/python_script.yml
+++ b/.github/workflows/python_script.yml
@@ -2,7 +2,7 @@ name: Run Python Script Periodically
 
 on:
   schedule:
-    - cron: '*/10 * * * *'
+    - cron: '0 0 1 * *'
 
 jobs:
   run-python-script:
